Add index setting to control whether fields are indexed by default.
Introduce `index.mapping.index_disabled_by_default` index setting to control the default of `index` mapping attribute of all field types except for `text` and `match_only_text` (doesn't have `index` attribute).

Default to `false`, which means all field types are indexed by default. But it can be configured to change the default of the `index` mapping attribute.

Note that if `index` is configured on a field that always takes precedence. This change just allows changing the default for mentioned field types with one simple setting change.